New ptable read function, to allow for new format

--- a/TauNews.html
+++ b/TauNews.html
@@ -8,7 +8,14 @@
 <body>
 <h1>&tau;-ARGUS New developments </h1><p>
 <hr>
-<h2>Last modified: 7 February 2020</h2>
+<h2>Last modified: 20 December 2021</h2>
+<h2>&tau;-ARGUS version 4.2.2</h2>
+<hr><i>20 December 2021</i><br>
+Version 4.2.2<br>
+Fixed bug with spaces in directory names.<br>
+Rewrote part of Modular implementation to better deal with memory issues.<br>
+More unfeasible tables will be detected without crashing. An error message wil be given instead.<br>
+Fixed bug with writing zero's only as cellkeys in CKM for frequency tables.<br>
 <h2>&tau;-ARGUS version 4.2.0</h2>
 <hr><i>7 February 2020</i><br>
 Version 4.2.0 build 1<br>
