Start changing interface to allow "Keep status"

--- a/TauNews.html
+++ b/TauNews.html
@@ -8,7 +8,13 @@
 <body>
 <h1>&tau;-ARGUS New developments </h1><p>
 <hr>
-<h2>Last modified: 20 December 2021</h2>
+<h2>Last modified: 29 July 2022</h2>
+<h2>&tau;-ARGUS version 4.2.3</h2>
+<hr><i>29 July 2022</i><br>
+Version 4.2.3<br>
+Newly improved ptables can be used in the CKM method.<br>
+MaxTime for Optimal in batch-file should work again.<br>
+Some improvements in error messages<br>
 <h2>&tau;-ARGUS version 4.2.2</h2>
 <hr><i>20 December 2021</i><br>
 Version 4.2.2<br>
