--- a/TauNews.html
+++ b/TauNews.html
@@ -8,7 +8,12 @@
 <body>
 <h1>&tau;-ARGUS New developments </h1><p>
 <hr>
-<h2>Last modified: 29 July 2022</h2>
+<h2>Last modified: 13 January 2023</h2>
+<h2>&tau;-ARGUS version 4.2.4</h2>
+<hr><i>13 January 2023</i><br>
+Version 4.2.4<br>
+Added functionality to keep status when making non-additive tabular data additive<br>
+Added &lt;RECODE&gt; functionality to batch commands<br>
 <h2>&tau;-ARGUS version 4.2.3</h2>
 <hr><i>29 July 2022</i><br>
 Version 4.2.3<br>
